Banner titles no longer aligned to the left

--- a/src/components/navigation/banner/Banner.scss
+++ b/src/components/navigation/banner/Banner.scss
@@ -1,19 +1,27 @@
 @import "../../../stylesheets/Variables.scss";
 
 .banner {
-   position: relative;
-   max-height: 15rem;
-   overflow: hidden;
+    position: relative;
+    max-height: 15rem;
+    overflow: hidden;
 
-   img {
+    img {
         width: 100%;
-   }
+    }
 
-   h1 {
-      position: absolute;
-      font-family: $secondary-font;
-      font-weight: bold;
-      top: 10rem;
-      left: 5rem;
-   }
+    div {
+        position: absolute;
+        top: 10rem;
+        left: 0;
+        width: 100%;
+        display: inline-block;
+    }
+
+    h1 {
+        font-family: $secondary-font;
+        font-weight: bold;
+        width: $body-width;
+        margin: auto;
+        font-size: 3rem;
+    }
 }
